cf.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Testing template 

Parameters:
  UserData:
    Type: String
    Default: IyEgL2Jpbi9iYXNoCnN1ZG8gYXB0LWdldCB1cGRhdGUKc3VkbyBhcHQtZ2V0IGluc3RhbGwgbmdpbnggLXkKZWNobyAiPGgxPkhpIERDMS1UaGlzIGlzIEdpdGh1YiBBY3Rpb24gUGlwZWxpbmU8L2gxPiIgfCBzdWRvIHRlZSAvdmFyL3d3dy9odG1sL2luZGV4Lm5naW54LWRlYmlhbi5odG1s

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 11.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
      - Key: VPC
        Value: Test_VPC
  
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: InternetGateway
        Value: InternetGateway
        
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC
  
  EIP:
    Type: AWS::EC2::EIP
    Properties:
      InstanceId: !Ref Instance
  
  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:  
        Ref: VPC
      Tags:
      - Key: route
        Value: vpcroute

  CarrierRoute:
    Type: AWS::EC2::Route
    Properties:
       RouteTableId:
         Ref: RouteTable
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId:
         Ref: InternetGateway  
  
  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: SubnetInstanceID
      RouteTableId:
        Ref: RouteTable

  SubnetRouteTableAssociationDatabase:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: SubnetDatabaseID
      RouteTableId:
        Ref: RouteTable

  KeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: cuong_key_rsa
      PublicKeyMaterial: ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDiTZJRXRA/wXJd8UqcI7FG73Oppzz4uGL/TymNw7tjMLMYQs4soP/S08d9nOX7QNU3c9ilM6T6MkzAAP8Jx9fWr4iFcPzsksMTAMSZx0hnsrBKVuuFRcY0lGOYerXQoZJYDERu+954+7NMVr5rY/P0fD+RIc4eP4ZXxWIkbLSPUXCVAVkotb+J/zOE92m/d00uy9P6Zmho78BcZi/IAWDwBfaHoOYiQ67e387aWFBMoaWzoftWRCA6OcIHWagXP3RQrSFnUq5dl/hoz668AygrnXoHRvFj5A5pJNo3FvQiwqJYe8ZFfXuNuG1l3kVfSXe8TjnYczmfuYtzGVW+V/Ef PC@DESKTOP-NDTM5JS

  Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0809dd5035d9217b8
      InstanceType: t2.micro
      SecurityGroupIds: [!Ref InstanceSecurityGroup]
      SubnetId: !Ref SubnetInstanceID
      KeyName: !Ref KeyPair
      UserData:
        Fn::Base64:
          Ref: UserData
#        Fn::Base64: !Sub |
#              #! /bin/bash
#              sudo apt-get update
#              sudo apt-get install nginx -y
#              echo "<h1>Hi DC1-This is Github Action Pipeline</h1>" | sudo tee /var/www/html/index.nginx-debian.html
      Tags:
      - Key: Instance
        Value: dc1WebServer
        
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: SecurityGroupTesting
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0
      Tags:
      - Key: SG
        Value: SGTesting     
        
  VPCIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 0
      ToPort: 65535
      CidrIp: "0.0.0.0/0"
#      SourceSecurityGroupId: 
#        Fn::GetAtt:
#          - InstanceSecurityGroup
#          - GroupId
      GroupId: !Ref InstanceSecurityGroup
#        Fn::GetAtt:
#          - InstanceSecurityGroup
#          - GroupId

  VPCEGress:  
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: tcp
      FromPort: 0
      ToPort: 65535
      CidrIp: "0.0.0.0/0"
#      DestinationSecurityGroupId:
#        Fn::GetAtt:
#          - InstanceSecurityGroup
#          - GroupId
      GroupId: !Ref InstanceSecurityGroup
#        Fn::GetAtt:
#          - InstanceSecurityGroup
#          - GroupId
        
  SubnetInstanceID:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 11.0.1.0/24
      AvailabilityZone: "ap-southeast-2a"
      Tags:
      - Key: Subnet
        Value: InstanceSubnet
        
  SubnetDatabaseID:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 11.0.2.0/24
      AvailabilityZone: "ap-southeast-2b"
      Tags:
      - Key: Subnet
        Value: DatabaseSubnet
        
  SubnetDatabase:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupName: DatabaseSubnet
      DBSubnetGroupDescription: TestingDatabaseSubnet
      SubnetIds: [ !Ref SubnetDatabaseID, !Ref SubnetInstanceID ]
      Tags:
      - Key: dbsubnet
        Value: DatabaseSubnet
        
  DatabaseInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: '100'
      VPCSecurityGroups: [!Ref InstanceSecurityGroup]
      DBSubnetGroupName: !Ref SubnetDatabase
      DBName: mainDatabase
#      AutomaticBackupReplicationRegion: "ap-northeast-1"
#      BackupRetentionPeriod: 1
      DBInstanceClass: db.t3.micro
      Engine: postgres
      Iops: 1000
      MasterUsername: "admin"
      MasterUserPassword: "password"
      StorageType: IO1
      Tags:
      - Key: Database
        Value: mainDatabase
Outputs:
  StackEIPGeneral:
    Description: Return EIP General
    Value: !Ref EIP
